=======
CHANGES
=======

3.7.0 (unreleased)
------------------

Initial release. This package was splitted from zope.app.security as a part
of the refactoring process to provide global principal registry without extra
dependencies.